# graphql-mutations-classgen

./: .gitignore  Cargo.toml  README.md  graphql.txt  package-lock.json  package.json  pre-install.js  start.js  uninstall.js
builds/safe-urqlcodgen-mutations/: safe-urqlcodgen-mutations
npm/: getBinary.js  run.js  uninstall.js
src/: main.rs
